added armor dialogue

--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -121,7 +121,7 @@
                     </span>
                     <span>
                         {{localize "PENDRAGON.Armor"}} {{actor.system.armor.total}}
-                        <a>
+                        <a class="armor-components">
                             <i class="fas fa-caret-down"></i>
                         </a>
                     </span>
