--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -213,6 +213,9 @@
   flex: none;
   width: auto;
 }
+.pendragon.dialogue .flex-container {
+  flex-wrap: nowrap;
+}
 .pendragon.sheet.actor {
   min-width: 560px;
   min-height: 420px;
