--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -249,6 +249,12 @@
   }
 }
 
+.pendragon.dialogue {
+  .flex-container {
+    flex-wrap: nowrap;
+  }
+}
+
 .pendragon.sheet.actor {
   min-width: 560px;
   min-height: 420px;
