--- a/templates/dialogues/armor-dialogue.hbs
+++ b/templates/dialogues/armor-dialogue.hbs
@@ -1,9 +1,9 @@
-<div class="{{cssClass}}">
+<div>
     {{#each parts}}
     <div>
         <h3>{{localize (concat "PENDRAGON." (capital @key))}}</h2>
-        <div class="flexrow" data-part="{{@key}}">
-            <input type="text" value="{{this.type}}" data-field="type" />
+        <div class="flex-container" data-part="{{@key}}">
+            <input type="text" value="{{this.type}}" data-field="type" placeholder="{{localize "PENDRAGON.Type"}}" />
             <input type="number" value="{{this.value}}" data-field="value" />
             <input type="checkbox" {{checked this.worn}} data-field="worn" />
         </div>
