--- a/styles/pendragon.css
+++ b/styles/pendragon.css
@@ -1,13 +1,45 @@
 .pendragon {
   /* || UTILITIES */
+  /* || CONTAINERS */
+  /* || GENERAL STYLES */
+  /* || OTHER */
   /* Sheet Tabs */
-  /* Items List */
 }
-.pendragon .self-left {
-  justify-self: start;
+.pendragon .pen-grid {
+  display: grid;
+  width: fit-content;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  column-gap: 0.5em;
 }
-.pendragon .self-right {
-  justify-self: end;
+.pendragon .flex-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  align-items: flex-start;
+}
+.pendragon .pen-container {
+  outline: black solid 2px;
+  margin: 1em;
+}
+.pendragon input[type="text"] {
+  background: #0000;
+  border: 0;
+  border-radius: 0;
+  border-bottom: 1px solid;
+}
+.pendragon input[type="number"] {
+  height: 28px;
+  width: 28px;
+  text-align: center;
+}
+.pendragon input[type="checkbox"] {
+  transform: scale(0.75);
+}
+.pendragon .pen-grid > .item-create {
+  grid-column-start: 1;
+  grid-column-end: -1;
 }
 .pendragon .window-content {
   height: 100%;
@@ -71,20 +103,6 @@
 .pendragon .sheet-header #joust .flex-container {
   align-items: baseline;
 }
-.pendragon input[type="text"] {
-  background: #0000;
-  border: 0;
-  border-radius: 0;
-  border-bottom: 1px solid;
-}
-.pendragon input[type="number"] {
-  height: 28px;
-  width: 28px;
-  text-align: center;
-}
-.pendragon input[type="checkbox"] {
-  transform: scale(0.75);
-}
 .pendragon .resource {
   width: 100%;
   height: 40px;
@@ -92,68 +110,32 @@
   float: left;
   width: max-content;
 }
-.pendragon .flex-container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  align-items: flex-start;
-}
-.pendragon .pen-container {
-  outline: black solid 2px;
-  margin: 1em;
-}
-.pendragon .container-grid {
-  display: grid;
-  width: fit-content;
-  justify-content: center;
-  justify-items: center;
-  align-items: center;
-  column-gap: 0.5em;
-}
 .pendragon .skills {
   grid-template-columns: 28px 1fr 28px;
 }
 .pendragon .skills label {
   justify-self: end;
 }
-.pendragon #play-grid {
+.pendragon .tab.play #play-grid {
   display: grid;
   align-items: start;
   grid-template-columns: 1fr min-content;
 }
-.pendragon #play-grid #traits {
+.pendragon .tab.play #traits {
   grid-template-columns: 28px 1fr 28px 28px 28px 28px 1fr 28px;
 }
-.pendragon #play-grid #traits .trait-plus {
+.pendragon .tab.play #traits .trait-plus {
   width: 20px;
   height: 20px;
 }
-.pendragon #play-grid #passions {
+.pendragon .tab.play #traits label:nth-of-type(odd) {
+  justify-self: end;
+}
+.pendragon .tab.play #traits label:nth-of-type(even) {
+  justify-self: start;
+}
+.pendragon .tab.play #passions {
   grid-template-columns: 28px 28px 1fr 28px 28px 28px;
-}
-.pendragon #play-grid #passions .item-create {
-  grid-column-start: 1;
-  grid-column-end: -1;
-}
-.pendragon #armor-parts {
-  grid-template-columns: 1fr 28px 28px;
-  margin: 0;
-}
-.pendragon #weapon-attacks {
-  grid-template-columns: 28px 1fr 28px auto 28px 28px;
-}
-.pendragon #weapon-attacks .item-create {
-  grid-column-start: 1;
-  grid-column-end: -1;
-}
-.pendragon #health-derived {
-  grid-template-columns: 1fr 28px;
-}
-.pendragon #wounds {
-  width: 12em;
-}
-.pendragon #wounds thead > tr :nth-child(1) {
-  width: 30px;
 }
 .pendragon .tab.combat .flex-combat:nth-of-type(1) {
   flex: 1 1 50%;
@@ -162,6 +144,21 @@
 .pendragon .tab.combat .flex-combat:nth-of-type(2) {
   flex: 2 1 50%;
   max-width: max-content;
+}
+.pendragon .tab.combat #weapon-attacks {
+  grid-template-columns: 28px 1fr 28px auto 28px 28px;
+}
+.pendragon .tab.combat #health-derived {
+  grid-template-columns: 1fr 28px;
+}
+.pendragon .tab.combat #health-derived :nth-child(odd) {
+  justify-self: start;
+}
+.pendragon .tab.combat #wounds {
+  width: 12em;
+}
+.pendragon .tab.combat #wounds thead > tr :nth-child(1) {
+  width: 30px;
 }
 .pendragon .tabs {
   flex: 0 0 40px;
@@ -188,46 +185,10 @@
 .pendragon .editor-content {
   height: 100%;
 }
-.pendragon .item-list {
-  list-style: none;
-  margin: 7px 0;
-  padding: 0;
-  overflow-y: auto;
-}
-.pendragon .item-list .item {
-  min-height: 30px;
-  line-height: 24px;
-  padding: 3px 0;
-  border-bottom: 1px solid #BBB;
-  align-items: stretch;
-}
-.pendragon .item-list .item img {
-  flex: 0 0 24px;
-  margin-right: 5px;
-}
-.pendragon .item-list .item-name {
-  margin: 0;
-}
-.pendragon .item-list .item-controls {
-  flex: 0 0 36px;
-}
-.pendragon .item-list .item-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-items: center;
-  flex: 2;
-  justify-content: flex-start;
-}
-.pendragon .item-list .item-button {
-  line-height: 1;
-  font-size: 11px;
-  flex: none;
-  width: auto;
-}
 .pendragon.dialogue .flex-container {
   flex-wrap: nowrap;
 }
+/* || Sheet Minimums */
 .pendragon.sheet.actor {
   min-width: 560px;
   min-height: 420px;
