--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -1,7 +1,53 @@
 .pendragon {
   /* || UTILITIES */
-  .self-left {justify-self: start;}
-  .self-right {justify-self: end;}
+  
+
+  /* || CONTAINERS */
+  .pen-grid {
+    display: grid;
+    width: fit-content;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    column-gap: 0.5em;
+  }
+
+  .flex-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    align-items: flex-start;
+  }
+
+  .pen-container {
+    outline: black solid 2px;
+    margin: 1em;
+  }
+
+  /* || GENERAL STYLES */
+  input[type="text"] {
+    background: #0000;
+    border: 0;
+    border-radius: 0;
+    border-bottom: 1px solid;
+  }
+
+  input[type="number"] {
+    height: 28px;
+    width: 28px;
+    text-align: center;
+  }
+
+  input[type="checkbox"] {
+    transform: scale(0.75)
+  }
+
+  .pen-grid > .item-create {
+    grid-column-start: 1;
+    grid-column-end: -1;
+  }
+
+  /* || OTHER */
 
   .window-content {
     height: 100%;
@@ -75,50 +121,12 @@
     }
   }
 
-  input[type="text"] {
-    background: #0000;
-    border: 0;
-    border-radius: 0;
-    border-bottom: 1px solid;
-  }
-
-  input[type="number"] {
-    height: 28px;
-    width: 28px;
-    text-align: center;
-  }
-
-  input[type="checkbox"] {
-    transform: scale(0.75)
-  }
-
   .resource {
     width: 100%;
     height: 40px;
     margin-top: 10px;
     float: left;
     width: max-content;
-  }
-
-  .flex-container {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    align-items: flex-start;
-  }
-
-  .pen-container {
-    outline: black solid 2px;
-    margin: 1em;
-  }
-
-  .container-grid {
-    display: grid;
-    width: fit-content;
-    justify-content: center;
-    justify-items: center;
-    align-items: center;
-    column-gap: 0.5em;
   }
 
   .skills {
@@ -128,52 +136,27 @@
     }
   }
 
-  #play-grid {
-    display: grid;
-    align-items: start;
-    grid-template-columns: 1fr min-content;
+  .tab.play {
+    #play-grid {
+      display: grid;
+      align-items: start;
+      grid-template-columns: 1fr min-content;
+    }
     #traits {
       grid-template-columns: 28px 1fr 28px 28px 28px 28px 1fr 28px;
       .trait-plus {
         width: 20px;
         height: 20px;
       }
-    }
-    #general-skills {
-      
+      label:nth-of-type(odd) {
+        justify-self: end;
+      }
+      label:nth-of-type(even) {
+        justify-self: start;
+      }
     }
     #passions {
       grid-template-columns: 28px 28px 1fr 28px 28px 28px;
-      .item-create {
-        grid-column-start: 1;
-        grid-column-end: -1;
-      } 
-    }
-  }
-
-  #armor-parts {
-    grid-template-columns: 1fr 28px 28px;
-    margin: 0;
-  }
-
-
-
-  #weapon-attacks {
-    grid-template-columns: 28px 1fr 28px auto 28px 28px;
-    .item-create {
-      grid-column-start: 1;
-      grid-column-end: -1;
-    } 
-  }
-
-  #health-derived {
-    grid-template-columns: 1fr 28px;
-  }
-
-  #wounds {
-    width: 12em;
-    thead > tr {
-      :nth-child(1) { width: 30px;}
     }
   }
 
@@ -185,6 +168,24 @@
     .flex-combat:nth-of-type(2) {
       flex: 2 1 50%;
       max-width: max-content;
+    }
+
+    #weapon-attacks {
+      grid-template-columns: 28px 1fr 28px auto 28px 28px;
+    }
+
+    #health-derived {
+      grid-template-columns: 1fr 28px;
+      :nth-child(odd) {
+        justify-self: start;
+      }
+    }
+
+    #wounds {
+      width: 12em;
+      thead > tr {
+        :nth-child(1) { width: 30px;}
+      }
     }
   }
 
@@ -218,50 +219,6 @@
     height: 100%;
   }
 
-  /* Items List */
-  .item-list {
-    list-style: none;
-    margin: 7px 0;
-    padding: 0;
-    overflow-y: auto;
-
-    .item {
-      min-height: 30px;
-      line-height: 24px;
-      padding: 3px 0;
-      border-bottom: 1px solid #BBB;
-      align-items: stretch;
-
-      img {
-        flex: 0 0 24px;
-        margin-right: 5px;
-      }
-    }
-
-    .item-name {
-      margin: 0;
-    }
-
-    .item-controls {
-      flex: 0 0 36px;
-    }
-
-    .item-buttons {
-      display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      align-items: center;
-      flex: 2;
-      justify-content: flex-start;
-    }
-
-    .item-button {
-      line-height: 1;
-      font-size: 11px;
-      flex: none;
-      width: auto;
-    }
-  }
 }
 
 .pendragon.dialogue {
@@ -269,6 +226,8 @@
     flex-wrap: nowrap;
   }
 }
+
+/* || Sheet Minimums */
 
 .pendragon.sheet.actor {
   min-width: 560px;
