--- a/styles/pendragon.less
+++ b/styles/pendragon.less
@@ -1,6 +1,6 @@
 .pendragon {
   /* || UTILITIES */
-  
+
 
   /* || CONTAINERS */
   .pen-grid {
@@ -45,6 +45,10 @@
   .pen-grid > .item-create {
     grid-column-start: 1;
     grid-column-end: -1;
+  }
+
+  a.active > i.far {
+    font-weight: 900; // Icons fill in when active
   }
 
   /* || OTHER */
