--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -36,9 +36,9 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="play">Play</a>
-        <a class="item" data-tab="combat">Combat</a>
-        <a class="item" data-tab="possessions">Possessions</a>
+        <a class="item" data-tab="play"><i class="far fa-masks-theater"></i></a>
+        <a class="item" data-tab="combat"><i class="far fa-swords"></i></a>
+        <a class="item" data-tab="possessions"><i class="far fa-boxes-stacked"></i></a>
     </nav>
 
     {{!-- Sheet Body --}}
