--- a/templates/actor-sheet.html
+++ b/templates/actor-sheet.html
@@ -11,9 +11,9 @@
             <div class="flex-container">
 
                 {{!-- Personal --}}
-                <div id="personal">
+                <div class="personal">
                     {{#each actor.system.personal}}
-                    <div {{#ifEquals @key "distinctiveFeatures"}}id="features"{{/ifEquals}}>
+                    <div {{#ifEquals @key "distinctiveFeatures"}}class="features"{{/ifEquals}}>
                         <label>{{localize (concat "PENDRAGON." (capital @key))}}</label>
                         <input type="text" name="system.personal.{{@key}}.value" value="{{this.value}}" />
                     </div>
@@ -21,7 +21,7 @@
                 </div>
 
                 {{!-- Scores --}}
-                <div id="joust">
+                <div class="joust">
                     <h3>{{localize "PENDRAGON.JoustScore"}}</h3>
                     <div class="flex-container">
                         <h4>{{localize "PENDRAGON.Wins"}}</h4>
@@ -46,11 +46,11 @@
 
         {{!-- Play Tab --}}
         <div class="tab play" data-group="primary" data-tab="play">
-            <div id="play-grid">
+            <div class="play-grid">
                 <div class="flex-container">
 
                     {{!-- Traits --}}
-                    <div id="traits" class="pen-container pen-grid">
+                    <div class="traits pen-container pen-grid">
                         {{#each actor.system.traits}}
                         {{#each this}}
                         {{#if @first}}
@@ -58,12 +58,12 @@
                         <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">
                             {{localize (concat "PENDRAGON." (capital @key))}}
                         </label>
-                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
+                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
                         <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
                         {{/if}}
                         {{#if @last}}
                         <button class="trait-plus" data-dual="{{@../key}}" data-trait="{{@key}}">+</button>
-                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" id="trait-input-{{@key}}" disabled/>
+                        <input type="number" name="system.traits.{{@../index}}.{{@key}}.value" value="{{this.value}}" disabled/>
                         <label class="trait rollable" data-label="{{localize this.label}}" data-value="{{this.value}}">
                             {{localize (concat "PENDRAGON." (capital @key))}}
                         </label>                            
@@ -74,7 +74,7 @@
                     </div>
 
                     {{!-- Passions --}}
-                    <div id="passions" class="pen-container pen-grid">
+                    <div class="passions pen-container pen-grid">
                         {{#each inventory.passion}}
                             <input class="item-checkbox" type="checkbox" data-item-id="{{this._id}}" {{checked this.system.isChecked}}/>
                             <img src="{{this.img}}" title="{{this.name}}"/>
@@ -133,7 +133,7 @@
                 <div class="flex-container flex-combat">
 
                     {{!-- Weapon Attacks --}}
-                    <div id="weapon-attacks" class="pen-container pen-grid">
+                    <div class="weapon-attacks pen-container pen-grid">
                         {{#each inventory.weapon}}
                         <img src="{{this.img}}" title="{{this.name}}"/>
                         <label>{{this.name}}</label>
@@ -164,7 +164,7 @@
                 <div class="flex-container flex-combat">
 
                     {{!-- Health --}}
-                    <div id="health" class="pen-container">
+                    <div class="health pen-container">
                         <h3>
                             <abbr title="{{localize "PENDRAGON.HitPoints"}}">
                                 {{localize "PENDRAGON.HitPointsShort"}}
@@ -183,7 +183,7 @@
                             Deterioration
                             <input type="number" name="system.damage.deterioration" value="{{actor.system.damage.deterioration}}"/>
                         </h4>
-                        <div id="health-derived" class="pen-grid">    
+                        <div class="health-derived pen-grid">    
                             <span>{{localize "PENDRAGON.Healing"}}</span><span>{{actor.system.derived.healing}}</span>
                             <span>{{localize "PENDRAGON.Knockdown"}}</span><span>{{actor.system.derived.knockdown}}</span>
                             <span>{{localize "PENDRAGON.MajorWound"}}</span><span>{{actor.system.derived.majorWound}}</span>
@@ -192,7 +192,7 @@
                     </div>
 
                     {{!-- Wounds --}}
-                    <table id="wounds" class="pen-table pen-container">
+                    <table class="wounds pen-table pen-container">
                         <thead>
                             <tr>
                                 <th><abbr title="{{localize "PENDRAGON.Damage"}}">{{localize "PENDRAGON.DamageShort"}}</abbr></th>
